# chemap

./: README.md  pyproject.toml
.github/workflows/: CI_build_and_matrix_tests.yml  CI_first_code_checks.yml  CI_publish.yaml
chemap/: __init__.py  data_loader.py  fingerprint_computation.py  fingerprint_conversions.py  metrics.py  types.py
chemap/additional_fingerprints/: __init__.py  element_count_fp.py  map4.py  mhfp.py
chemap/benchmarking/: __init__.py  fingerprint_duplicates.py  utils.py
chemap/fingerprints/: __init__.py  chemap_base_fingerprint.py  custom_fingerprint.py  element_count_fp.py  lingo.py  map4.py  mhfp.py
chemap/plotting/: __init__.py  benchmark_duplicates.py  chem_space_umap.py  cleveland.py  colormap_handling.py  colormaps.py  scatter_plots.py  types.py
src/: approx_nn.py  fingerprint_computation.py  map4neo.py  mbp.py  metrics.py  utils.py
tests/: test_benchmarking_duplicates.py  test_chemap_base_fingerprint.py  test_cleveland_plot.py  test_colormap_handling.py  test_element_count_fp.py  test_fingerprint_computation.py  test_fingerprint_conversions.py  test_fingerprint_duplicates.py  test_fingerprint_generators.py  test_fingerprint_statistics.py  test_lingo.py  test_map4.py  test_metrics.py  test_mhfp_encoder.py
