[tool.poetry]
name = "chemap"
version = "0.1.0"
description = "Library for computing molecular fingerprint based similarities as well as dimensionality reduction based chemical space visualizations. "
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
map4 = ">=1.1.3"
numba = ">=0.61.2"
numpy = ">=2.1.0"
pandas = ">=2.2.1"
scipy= ">=1.15.2"
matplotlib= ">=3.10.1"
rdkit = ">=2024.9.6"
scikit-fingerprints = ">=1.15.0"
tqdm = ">=4.67.1"

[tool.poetry.group.dev.dependencies]
decorator = "^5.1.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
yapf = "^0.40.1"
testfixtures = "^7.1.0"
twine = "^6.1.0"
poetry-bumpversion = "^0.3.1"
pre-commit = "^4.2.0"
ruff = "^0.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
output-format = "grouped"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
# TODO: add some rules in future, eg. W291/292
extend-select = ["D", "E", "I"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D200",
    "D201",
    "D202",
    "D203",
    "D204",
    "D205",
    "D209",
    "D210",
    "D212",
    "D213",
    "D4",
]

[tool.ruff.lint.isort]
known-first-party = ["champ"]
lines-after-imports = 2
no-lines-before = ["future", "standard-library", "third-party", "first-party", "local-folder"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# disable pydoc for tests
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "integration-tests",
]
